update dependencies and fix warnings.